[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=2]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -354.0
margin_top = -138.0
margin_right = 2261.0
margin_bottom = 1166.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 503.136
margin_top = 71.3524
margin_right = 1397.14
margin_bottom = 596.352
theme = ExtResource( 1 )
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 894.0
margin_bottom = 33.0
text = "Foul Writing"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 894.0
margin_bottom = 174.0
custom_constants/separation = 50
alignment = 1

[node name="PlayBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 255.0
margin_right = 319.0
margin_bottom = 41.0
text = "Play"

[node name="InstructBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 369.0
margin_right = 524.0
margin_bottom = 41.0
text = "How to Play"

[node name="QuitBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 574.0
margin_right = 638.0
margin_bottom = 41.0
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 929.136, 295.001 )
current = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/InstructBtn" to="." method="_on_InstructBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
